
Please report any issue over on [GitHub here](https://github.com/ramdor/Thetis/issues/new/choose).

## Join us on Discord for active test builds and much more : [Click Here](https://discord.gg/6fHCRKnDc9)

## v2.10.3.11 - Dev Change Log
- [change] updated PortAudio from the Release 19.7.0 to the latest code as of 29/06/25. Version number has not changed. Last commit was 13/06/25 #87e35e7

## v2.10.3.10 - Change Log
- [add] flash new TCI spots option in Setup->Serial/Network/MidiCat->Network. Spots that are <2 mins old will flash. Hovering over them will stop the flashing
- [add] added ^o- symbols to anan meter needle, and signal text meter to represent reading source. (^-=sig o=sig avg, ^=max fft bin)
- [fix] fix rare 'object in use' error with pretty tracker (scroll bars in UI)
- [fix] fixed ChannelMaster.dll version issue. Increase version to v1.0.1.0 which should resolve install issues where ChannelMaster.dll was not being overwritten
- [fix] fixed CW sidetone (MON) issue where it would turn off if mode was changed

## v2.10.3.9 - Change Log
- [add] an [or decreased] option added to "Force ATT on Tx to 31 when Drive or Tune power is increased and PS-A is on"
- [add] many tool tips added to fields and options in the linearity form
- [add] many tool tips added to DSP setup form
- [add] software sidetone option added. New options in Setup->DSP->CW. Audio via cmASIO + VAC. Note: this only works from cwx form and external rts/cts cw switching
- [add] tx filter edge colour for the filter view item
- [add] show/hide option for grid frequency numbers in Setup->Appearance->RX Display->Text
- [add] options to show/hide major/minor grid lines in Setup->Appearance->RX Display
- [add] option to show two tone measurements in the linearity form. Note: suitable spectrum scale etc required. Code attempts to find peaks at expected locations
- [add] added fft size display to the rx display settings
- [add] Red-Pitaya radio model. Specific modifications for that hardware